--- a/GOS_FxApps.csproj
+++ b/GOS_FxApps.csproj
@@ -265,6 +265,12 @@
     <Compile Include="userinfo.Designer.cs">
       <DependentUpon>userinfo.cs</DependentUpon>
     </Compile>
+    <Compile Include="weldingp.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="weldingp.Designer.cs">
+      <DependentUpon>weldingp.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Dashboard.resx">
       <DependentUpon>Dashboard.cs</DependentUpon>
     </EmbeddedResource>
@@ -304,6 +310,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="userinfo.resx">
       <DependentUpon>userinfo.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="weldingp.resx">
+      <DependentUpon>weldingp.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
