--- a/App.config
+++ b/App.config
@@ -1,5 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="GOS_FxApps.Properties.Settings.gos_appsConnectionString"
+            connectionString="Data Source=192.168.1.25;Initial Catalog=gos_apps;Persist Security Info=True;User ID=sa;Password=%tii2025%;TrustServerCertificate=True"
+            providerName="System.Data.SqlClient" />
+    </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
     </startup>
