--- a/GOS_FxApps.csproj
+++ b/GOS_FxApps.csproj
@@ -257,6 +257,12 @@
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="pemakaianMaterial.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="pemakaianMaterial.Designer.cs">
+      <DependentUpon>pemakaianMaterial.cs</DependentUpon>
+    </Compile>
     <Compile Include="Penerimaan.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -315,6 +321,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="pemakaianMaterial.resx">
+      <DependentUpon>pemakaianMaterial.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Penerimaan.resx">
       <DependentUpon>Penerimaan.cs</DependentUpon>
