--- a/GOS_FxApps.csproj
+++ b/GOS_FxApps.csproj
@@ -212,6 +212,22 @@
     <Compile Include="Dashboard.Designer.cs">
       <DependentUpon>Dashboard.cs</DependentUpon>
     </Compile>
+    <Compile Include="DataSet\PengirimanForm.cs">
+      <DependentUpon>PengirimanForm.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="DataSet\PengirimanForm.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>PengirimanForm.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="DataSet\PerbaikanForm.cs">
+      <DependentUpon>PerbaikanForm.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="DataSet\PerbaikanForm.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>PerbaikanForm.xsd</DependentUpon>
+    </Compile>
     <Compile Include="DataSet\PenerimaanForm.cs">
       <DependentUpon>PenerimaanForm.xsd</DependentUpon>
     </Compile>
@@ -355,6 +371,12 @@
     <EmbeddedResource Include="pemakaianMaterial.resx">
       <DependentUpon>pemakaianMaterial.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Pengiriman.rdlc">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Perbaikan.rdlc">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </EmbeddedResource>
     <EmbeddedResource Include="Penerimaan.rdlc">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </EmbeddedResource>
@@ -392,6 +414,28 @@
     <EmbeddedResource Include="weldingp.resx">
       <DependentUpon>weldingp.cs</DependentUpon>
     </EmbeddedResource>
+    <None Include="DataSet\PengirimanForm.xsc">
+      <DependentUpon>PengirimanForm.xsd</DependentUpon>
+    </None>
+    <None Include="DataSet\PengirimanForm.xsd">
+      <SubType>Designer</SubType>
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>PengirimanForm.Designer.cs</LastGenOutput>
+    </None>
+    <None Include="DataSet\PengirimanForm.xss">
+      <DependentUpon>PengirimanForm.xsd</DependentUpon>
+    </None>
+    <None Include="DataSet\PerbaikanForm.xsc">
+      <DependentUpon>PerbaikanForm.xsd</DependentUpon>
+    </None>
+    <None Include="DataSet\PerbaikanForm.xsd">
+      <SubType>Designer</SubType>
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>PerbaikanForm.Designer.cs</LastGenOutput>
+    </None>
+    <None Include="DataSet\PerbaikanForm.xss">
+      <DependentUpon>PerbaikanForm.xsd</DependentUpon>
+    </None>
     <None Include="DataSet\PenerimaanForm.xsc">
       <DependentUpon>PenerimaanForm.xsd</DependentUpon>
     </None>
