--- a/GOS_FxApps.csproj
+++ b/GOS_FxApps.csproj
@@ -382,6 +382,12 @@
     <Compile Include="reportviewr.Designer.cs">
       <DependentUpon>reportviewr.cs</DependentUpon>
     </Compile>
+    <Compile Include="setmin_rb.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="setmin_rb.Designer.cs">
+      <DependentUpon>setmin_rb.cs</DependentUpon>
+    </Compile>
     <Compile Include="userinfo.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -394,6 +400,27 @@
     <Compile Include="weldingp.Designer.cs">
       <DependentUpon>weldingp.cs</DependentUpon>
     </Compile>
+    <None Include="Resources\dots.png" />
+    <None Include="Resources\search.png" />
+    <None Include="Resources\optimization %281%29.png" />
+    <None Include="Resources\optimization.png" />
+    <None Include="Resources\material-management.png" />
+    <None Include="Resources\delivery-service1.png" />
+    <None Include="Resources\corporate.png" />
+    <None Include="Resources\recycled-material.png" />
+    <None Include="Resources\welding-machine.png" />
+    <None Include="Resources\delivery.png" />
+    <None Include="Resources\tool-box.png" />
+    <None Include="Resources\delivery-service.png" />
+    <None Include="Resources\history.png" />
+    <None Include="Resources\pdf.png" />
+    <None Include="Resources\edit-tools.png" />
+    <None Include="Resources\dashboard.png" />
+    <None Include="Resources\data-entry.png" />
+    <None Include="Resources\download.png" />
+    <None Include="Resources\home %283%29.png" />
+    <None Include="Resources\home %282%29.png" />
+    <None Include="Resources\home %281%29.png" />
     <EmbeddedResource Include="actual_28.rdlc">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </EmbeddedResource>
@@ -505,6 +532,9 @@
     </Content>
     <EmbeddedResource Include="reportviewr.resx">
       <DependentUpon>reportviewr.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="setmin_rb.resx">
+      <DependentUpon>setmin_rb.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="userinfo.resx">
       <DependentUpon>userinfo.cs</DependentUpon>
