--- a/GOS_FxApps.csproj
+++ b/GOS_FxApps.csproj
@@ -220,6 +220,11 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>actual.xsd</DependentUpon>
     </Compile>
+    <Compile Include="DataSet\koefisiensi.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>koefisiensi.xsd</DependentUpon>
+    </Compile>
     <Compile Include="DataSet\kondisi.cs">
       <DependentUpon>kondisi.xsd</DependentUpon>
     </Compile>
@@ -412,6 +417,17 @@
     <Compile Include="weldingp.Designer.cs">
       <DependentUpon>weldingp.cs</DependentUpon>
     </Compile>
+    <None Include="DataSet\koefisiensi.xsc">
+      <DependentUpon>koefisiensi.xsd</DependentUpon>
+    </None>
+    <None Include="DataSet\koefisiensi.xsd">
+      <SubType>Designer</SubType>
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>koefisiensi.Designer.cs</LastGenOutput>
+    </None>
+    <None Include="DataSet\koefisiensi.xss">
+      <DependentUpon>koefisiensi.xsd</DependentUpon>
+    </None>
     <None Include="Resources\search %282%29.png" />
     <None Include="Resources\search %281%29.png" />
     <None Include="Resources\dots.png" />
@@ -483,6 +499,9 @@
     <EmbeddedResource Include="infoalluser.resx">
       <DependentUpon>infoalluser.cs</DependentUpon>
     </EmbeddedResource>
+    <Content Include="koefisiensi.rdlc">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <EmbeddedResource Include="koefisiensi.resx">
       <DependentUpon>koefisiensi.cs</DependentUpon>
     </EmbeddedResource>
