--- a/packages.config
+++ b/packages.config
@@ -24,6 +24,7 @@
   <package id="Microsoft.IdentityModel.Protocols" version="8.9.0" targetFramework="net48" />
   <package id="Microsoft.IdentityModel.Protocols.OpenIdConnect" version="8.9.0" targetFramework="net48" />
   <package id="Microsoft.IdentityModel.Tokens" version="8.9.0" targetFramework="net48" />
+  <package id="Microsoft.Office.Interop.Excel" version="15.0.4795.1001" targetFramework="net48" />
   <package id="Microsoft.ReportingServices.ReportViewerControl.Winforms" version="150.1652.0" targetFramework="net48" />
   <package id="Microsoft.ReportViewer.Common" version="10.0.40219.1" targetFramework="net48" />
   <package id="Microsoft.ReportViewer.WinForms" version="10.0.40219.1" targetFramework="net48" />
