--- a/GOS_FxApps.csproj
+++ b/GOS_FxApps.csproj
@@ -246,6 +246,11 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>laporanpemakaian.xsd</DependentUpon>
     </Compile>
+    <Compile Include="DataSet\material.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>material.xsd</DependentUpon>
+    </Compile>
     <Compile Include="DataSet\PengirimanForm.cs">
       <DependentUpon>PengirimanForm.xsd</DependentUpon>
     </Compile>
@@ -446,6 +451,17 @@
     <Content Include="Data Barang Template.xlsx">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <None Include="DataSet\material.xsc">
+      <DependentUpon>material.xsd</DependentUpon>
+    </None>
+    <None Include="DataSet\material.xsd">
+      <SubType>Designer</SubType>
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>material.Designer.cs</LastGenOutput>
+    </None>
+    <None Include="DataSet\material.xss">
+      <DependentUpon>material.xsd</DependentUpon>
+    </None>
     <None Include="Resources\search %282%29.png" />
     <None Include="Resources\search %281%29.png" />
     <None Include="Resources\dots.png" />
@@ -479,6 +495,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </EmbeddedResource>
     <EmbeddedResource Include="actual_31.rdlc">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="cardmaterial.rdlc">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </EmbeddedResource>
     <EmbeddedResource Include="Dashboard.resx">
