--- a/Properties/Settings.settings
+++ b/Properties/Settings.settings
@@ -29,10 +29,10 @@
     <Setting Name="gos_appsserver" Type="(Connection string)" Scope="Application">
       <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
 &lt;SerializableConnectionString xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"&gt;
-  &lt;ConnectionString&gt;Data Source=192.168.1.64;Initial Catalog=gos_apps;User ID=sa;Password=%tii2025%;TrustServerCertificate=True&lt;/ConnectionString&gt;
+  &lt;ConnectionString&gt;Data Source=192.168.1.64;Initial Catalog=gos_apps;User ID=sa;Password=$Genta2025$;TrustServerCertificate=True&lt;/ConnectionString&gt;
   &lt;ProviderName&gt;System.Data.SqlClient&lt;/ProviderName&gt;
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
-      <Value Profile="(Default)">Data Source=192.168.1.64;Initial Catalog=gos_apps;User ID=sa;Password=%tii2025%;TrustServerCertificate=True</Value>
+      <Value Profile="(Default)">Data Source=192.168.1.64;Initial Catalog=gos_apps;User ID=sa;Password=$Genta2025$;TrustServerCertificate=True</Value>
     </Setting>
   </Settings>
 </SettingsFile>
